--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,15 +83,15 @@
                     Поддержка и сопровождение разработанных решений
                   </li>
                 </ul>
-                <!-- <div class="btns__lab5">
-                    <button class="bt-add-icon" id="add-icon-btn">Добавить иконку</button>
-                    <button class="bt-remove-icon" id="remove-icon-btn">Удалить иконку</button>
+                <div class="btns__lab5">
+                  <button class="bt-add-icon" id="add-icon-btn">
+                    Добавить иконку
+                  </button>
+                  <button class="bt-remove-icon" id="remove-icon-btn">
+                    Удалить иконку
+                  </button>
                 </div>
-                <div id="icons-container"></div> -->
-                <button class="btn-primaty" type="button" 
-                onclick="addDel('star')"
-                class="btn btn-outline-light bth-square">Добавить/удалить контент</button>
-                <div class="starstar"><i class="fa fa-star" id="star"></i></div>
+                <div id="icons-container"></div>
               </div>
             </div>
           </div>
